fix image and iframe mobile overflow

--- a/css/_index.sass
+++ b/css/_index.sass
@@ -33,6 +33,8 @@
     display: inline-block
     a
       color: $strong-font-color
+  img, iframe
+    max-width: 100%
 
 .post-list
   margin-top: 50px
